<!-- 
	Copyright (C) 2013 bwgz.org
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License version 3 as 
	published by the Free Software Foundation.

	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.

	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Quotation</string>
    <string name="small_widget_name">Quotation (Mini)</string>
    <string name="large_widget_name">Quotation (Full)</string>
    
    <string name="actionbar_back">Back</string>
    <string name="actionbar_forward">Next</string>
    <string name="actionbar_new">New</string>
    <string name="actionbar_share">Share</string>
    
	<string name="menu_settings">Settings</string>
	<string name="unattributed_quote">Unattributed Author</string>
	<string name="loading_quote">Loading quotation &#8230;</string>
	<string name="sharing_quote">Share quotation to &#8230;</string>
		
	<string name="title_settings">Settings</string>
	<string name="title_about">About</string>
	<string name="title_version">Version</string>
	<string name="title_legal">Legal</string>
	<string name="title_attribution">Attribution</string>
	<string name="title_terms_of_use">Terms of Use</string>
	<string name="title_environment">Environment</string>
</resources>
